--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hotel Camille</title>
-  <link rel="icon" href="/img/favicon.ico">
+  <link rel="icon" href="img/favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
   
     <a class="close-nav" href="#">
       <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M18 0.5C8.25 0.5 0.5 8.25 0.5 18C0.5 27.75 8.25 35.5 18 35.5C27.75 35.5 35.5 27.75 35.5 18C35.5 8.25 27.75 0.5 18 0.5ZM24.75 26.75L18 20L11.25 26.75L9.25 24.75L16 18L9.25 11.25L11.25 9.25L18 16L24.75 9.25L26.75 11.25L20 18L26.75 24.75L24.75 26.75Z" fill="#000"/>
+        <path d="M18 0.5C8.25 0.5 0.5 8.25 0.5 18C0.5 27.75 8.25 35.5 18 35.5C27.75 35.5 35.5 27.75 35.5 18C35.5 8.25 27.75 0.5 18 0.5ZM24.75 26.75L18 20L11.25 26.75L9.25 24.75L16 18L9.25 11.25L11.25 9.25L18 16L24.75 9.25L26.75 11.25L20 18L26.75 24.75L24.75 26.75Z" fill="#C2A68B"/>
       </svg>    
     </a>
 
@@ -65,7 +65,7 @@
 
 <section id="home">
 
-  <div class="home-container" style="background: url(/img/photos/header.jpg) 100% no-repeat; background-size: cover;">
+  <div class="home-container" style="background: url(img/photos/header.jpg) 100% no-repeat; background-size: cover;">
 
     <div class="home-layer"></div>
 
@@ -75,6 +75,7 @@
       <p>Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet.Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet.</p>
     </div>
 
+    <div class="header-vertical" style="background: url(img/photos/header-vertical.jpg) 100% no-repeat; background-size: cover;"></div>
     <div class="home-btn">
       <a class="book">Réserver</a>
     </div>
@@ -84,19 +85,122 @@
 </section>
 
 <section id="rooms">
+
   <div class="rooms-container">
-    <h2>Un lieu hors du temps</h2>
+    <div class="rooms-content">
+    <h2>Un lieu</h2>
+    <h2>hors du temps</h2>
     <hr>
     <p>Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet. Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet. Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet.Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet.</p>
     <a class="btn">Voir les chambres</a>
-
+    </div>
+  </div>
+  
+  <div class="slider-container">
+    <div style="background: url('img/photos/slideshow1.jpg') center no-repeat; background-size:cover;"></div>
+   <!--<div style="background: url('img/slider/slide2.jpg') center no-repeat; background-size:cover;"></div>
+    <div style="background: url('img/slider/slide3.jpg') center no-repeat; background-size:cover;"></div>
+    <div style="background: url('img/slider/slide4.jpg') center no-repeat; background-size:cover;"></div>-->
   </div>
 
 </section>
-<section id="restaurants"></section>
-<section id="offres"></section>
-<section id="contact"></section>
-<footer></footer>
+
+<section id="services">
+  <div class="services-vertical" style="background: url(img/photos/services-vertical.jpg) 100% no-repeat; background-size: cover;"></div>
+  <div class="services-container">
+    <div class="services-content">
+    <h2>Services</h2>
+    <h2>&#x26; Prestations</h2>
+    <hr>
+    <p>Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet. Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet. Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet.Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet.</p>
+    <a class="btn">Voir les restaurants</a>
+    </div>
+  </div>
+
+  <div class="slider-container video">
+    <div style="background: url('img/photos/video.jpg') center no-repeat; background-size:cover;"></div>
+  </div>
+  <div class="gallery-bloc">
+    <a href="#">Voir la galerie</a>
+  </div>  
+</section>
+
+<section id="offres">
+  <div class="offres-container">
+
+    <div class="offres-title">
+      <h2>Nos offres du moment</h2>
+      <hr class="v-line">
+    </div>
+    <div class="focus-container">
+      <div class="focus-content">
+        <div class="focus-img" style="background: url('img/photos/offre1.jpg') center no-repeat; background-size:cover;"></div>
+        <div class="focus-text">
+          <h3>Saint Valentin</h3>
+          <p>Nulla porttitor ccumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. 
+            <span class="more"> Lorem ipsum dolor sit amet.Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id.</span>
+          </p>
+          <p class="price">A partir de 125 EUR</p>
+          <a class="btn">En savoir plus</a>
+        </div>
+
+      </div>
+  
+      <div class="focus-content">
+        <div class="focus-img" style="background: url('img/photos/offre2.jpg') center no-repeat; background-size:cover;"></div>
+        <div class="focus-text">
+          <h3>Un repas offert</h3>
+          <p>Nulla porttitor ccumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. 
+            <span class="more">Lorem ipsum dolor sit amet. Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit amet.</span>
+          </p>
+          <p class="price">A partir de 125 EUR</p>
+          <a class="btn">En savoir plus</a>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<footer>
+  <a href="#home">
+  <img src="img/logo-compact-brown.svg" alt="logo">
+  <h3>Camille</h3>
+  <ul>
+    <li>
+      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 260 245">
+      <path d="m56,237 74-228 74,228L10,96h240"/>
+      </svg>
+    </li>
+    <li>
+      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 260 245">
+      <path d="m56,237 74-228 74,228L10,96h240"/>
+      </svg>
+    </li>
+    <li>
+      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 260 245">
+      <path d="m56,237 74-228 74,228L10,96h240"/>
+      </svg>
+    </li>
+    <li>
+      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 260 245">
+      <path d="m56,237 74-228 74,228L10,96h240"/>
+      </svg>
+    </li>
+    <li>
+      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 260 245">
+      <path d="m56,237 74-228 74,228L10,96h240"/>
+      </svg>
+    </li>
+  </ul>
+</a>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
